29 April 2014: Wouter
	- iana portlist updated.

23 April 2014: Wouter
	- Patch from Jeremie Courreges-Anglas to use arc4random_uniform
	  if available on the OS, it gets entropy from the OS.

15 April 2014: Wouter
	- Fix compile with libevent2 on FreeBSD.

11 April 2014: Wouter
	- Fix #502: explain that do-ip6 disable does not stop AAAA lookups,
	  but it stops the use of the ipv6 transport layer for DNS traffic.
	- iana portlist updated.

10 April 2014: Wouter
	- iana portlist updated.
	- Patch from Hannes Frederic Sowa for Linux 3.15 fragmentation
	  option for DNS fragmentation defense.
	- Document that dump_requestlist only prints queries from thread 0.
	- unbound-control stats prints num.query.tcpout with number of TCP
	  outgoing queries made in the previous statistics interval.
	- Fix #567: unbound lists if forward zone is secure or insecure with
	  +i annotation in output of list_forwards, also for list_stubs
	  (for NetworkManager integration.)
	- Fix #554: use unsigned long to print 64bit statistics counters on
	  64bit systems.
	- Fix #558: failed prefetch lookup does not remove cached response
	  but delays next prefetch (in lieu of caching a SERVFAIL).
	- Fix #545: improved logging, the ip address of the error is printed
	  on the same log-line as the error.

8 April 2014: Wouter
	- Fix #574: make test fails on Ubuntu 14.04.  Disabled remote-control
	  in testbound scripts.
	- iana portlist updated.

7 April 2014: Wouter
	- C.ROOT-SERVERS.NET has an IPv6 address, and we updated the root
	  hints (patch from Anand Buddhdev).
	- Fix #572: Fix unit test failure for systems with different
	  /etc/services.

28 March 2014: Wouter
	- Fix #569: do_tcp is do-tcp in unbound.conf man page.

25 March 2014: Wouter
	- Patch from Stuart Henderson to build unbound-host man from .1.in.

24 March 2014: Wouter
	- Fix print filename of encompassing config file on read failure.

12 March 2014: Wouter
	- tag 1.4.22
	- trunk has 1.4.23 in development.
